Upgrade FOCAS API contract to v1.2-R
